--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,35 @@ a {
   box-sizing: border-box;
 }
 
+.pagination {
+  display: inline-block;
+}
+
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  border: 1px solid #ddd;
+}
+
+.pagination a.active {
+  background-color: #4CAF50;
+  color: white;
+  border: 1px solid #4CAF50;
+}
+
+.pagination a:hover:not(.active) {background-color: #ddd;}
+
+.pagination a:first-child {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+.pagination a:last-child {
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
@@ -24,3 +53,75 @@ a {
     background: black;
   }
 }
+
+.table-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.table-container h2 {
+  margin: 0;
+  text-decoration: underline;
+}
+
+table {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+table td,
+table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+table tr:nth-child(even) {
+  background-color: #e9ebec;
+}
+
+table tr:hover {
+  background-color: #ddd;
+}
+
+table tr {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+}
+
+input {
+  width: 99%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+}
+
+table th,
+tfoot td {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #8e8e93;
+  color: white;
+}
+
+.columns_toggle {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  background-color: rgb(175, 228, 122);
+  padding: 0.5rem;
+  border-radius: 8px;
+}
+
+@media only screen and (max-width: 600px) {
+  table thead {
+    display: none;
+  }
+}
+
+
+
